--- a/uicomponents/src/main/res/values/strings.xml
+++ b/uicomponents/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="all_notes">All Notes</string>
+    <string name="pin">Pin</string>
+    <string name="list">List</string>
     <string name="search">Search</string>
+    <string name="write">Write</string>
+    <string name="image">Image</string>
+    <string name="close">Close</string>
+
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet,
         consectetur adipiscing elit. Ut quis semper eros.
