Work on Note screen top bar

--- a/uicomponents/src/main/res/values/strings.xml
+++ b/uicomponents/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="pin">Pin</string>
     <string name="list">List</string>
     <string name="search">Search</string>
+    <string name="share">Share</string>
     <string name="write">Write</string>
     <string name="image">Image</string>
+    <string name="done">Done</string>
     <string name="close">Close</string>
 
     <string name="lorem_ipsum">
