Work on main text logic

--- a/uicomponents/src/main/res/values/strings.xml
+++ b/uicomponents/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="pin">Pin</string>
     <string name="list">List</string>
     <string name="search">Search</string>
+    <string name="title">Title</string>
     <string name="share">Share</string>
     <string name="write">Write</string>
     <string name="image">Image</string>
