--- a/uicomponents/common/src/main/res/values/strings.xml
+++ b/uicomponents/common/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="done">Done</string>
     <string name="close">Close</string>
 
+    <string name="title_id">title_id</string>
+
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet,
         consectetur adipiscing elit. Ut quis semper eros.
